Fix header overflow on <1920x1080
The padding in the header was erased to reduce volume and avoid overflow

--- a/style.css
+++ b/style.css
@@ -72,14 +72,12 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
     height: fit-content;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
 }
 
 #search_container,
 #header_right {
-    padding: 10px;
     display: flex;
 }
 
